# axum-trait-error

./: Cargo.toml
error/: Cargo.toml
serve/: Cargo.toml
serve/src/: main.rs
serve/src/routes/: route.rs
src/: main.rs
src/error/: mod.rs
src/error/src/: error.rs
