[package]
name = "serve"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "serve"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.5.1", features = ["catch-panic"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
error = { path = "../error" }
